--- a/styles/style.css
+++ b/styles/style.css
@@ -79,3 +79,17 @@ h2{
     background-color: #c97a13;
     border-color: #ff6913;
 }
+
+
+
+/* ------------------------------------------------------------------ */
+
+table {
+    border-collapse: collapse;
+    margin: 10px 0;
+}
+th, td {
+    border: 1px solid black;
+    padding: 5px;
+    text-align: center;
+}
